--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8888
-environment.projectsImagesPath=/Users/nirhillel/WeBuild/WeBuild/webuild-website/src/theme/projectsImages/projectId-
+environment.projectsImagesPath=././././projectsImages/projectId-
