testing add images folders

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8888
-environment.projectsImagesPath=./projectsImages/projectId-
+environment.projectsImagesPath=../projectsImages/projectId-
